NTR: fix ci pipeline

--- a/.github/actions/run-e2e/action.yml
+++ b/.github/actions/run-e2e/action.yml
@@ -58,17 +58,17 @@ inputs:
     required: false
   # ------------------------------------------------------------------------------------
   # ------------------------------------------------------------------------------------
-  # PRIVATE CONSTANTS
+  # PRIVATE VARIABLES
   _SHOP_DOMAIN:
-    description: ''
+    description: 'This domain will be used in Cypress as BASE_URL'
     default: 'local.mollie.shop'
     required: false
   _STORE_API_KEY:
-    description: ''
+    description: 'This is the Store API Key that is used when launching our Shopware. Its not confidential, its just for here'
     default: 'SWSCOVFSNKLBYUTKS1VSOEDTUQ'
     required: false
   _ZIP_FILE:
-    description: ''
+    description: 'This is the defined filename of the ZIP file that we use for the installation of the plugin'
     default: '~/.build/MolliePayments.zip'
     required: false
 
@@ -77,14 +77,6 @@ inputs:
 runs:
   using: "composite"
   steps:
-
-    - name: Mount Build Cache
-      uses: actions/cache@v3
-      with:
-        key: cache-plugin
-        path: ~/.build
-
-    # --------------------------------------------------------------------------------------------------------------------------------------
 
     - name: Download Docker
       shell: bash
@@ -126,12 +118,12 @@ runs:
     # --------------------------------------------------------------------------------------------------------------------------------------
 
     - name: Install Cypress
-      if: ${{ inputs.RUN_CYPRESS }} == 'true'
+      if: ${{ inputs.RUN_CYPRESS == 'true' }}
       shell: bash
       run: cd tests/Cypress && make install -B
 
     - name: Remove deprecated Cypress Tests
-      if: ${{ inputs.RUN_CYPRESS }} == 'true' && ${{ inputs.REMOVE_DEPRECATED_TESTS }} == 'true'
+      if: ${{ inputs.RUN_CYPRESS == 'true' && inputs.REMOVE_DEPRECATED_TESTS == 'true' }}
       shell: bash
       run: |
         # SEPA Direct Debit has been completely removed from Mollie. We have to remove that entry from the tests in old Cypress versions
@@ -139,14 +131,14 @@ runs:
         sed -i "/key: 'directdebit'/g" $(pwd)/tests/Cypress/cypress/integration/storefront/checkout/checkout-success.spec.js || true
 
     - name: Start Cypress
-      if: ${{ inputs.RUN_CYPRESS }} == 'true' && ${{ inputs.TESTRAIL }} == 'false'
+      if: ${{ inputs.RUN_CYPRESS == 'true' && inputs.TESTRAIL == 'false' }}
       shell: bash
       run: |
         cd tests/Cypress && \
         make run shopware=${{ inputs.SHOPWARE }} storeApiKey=${{ inputs._STORE_API_KEY }} url=https://${{ inputs._SHOP_DOMAIN }} filters="${{ inputs.FILTERS }}"
 
     - name: Start Cypress with TestRail
-      if: ${{ inputs.RUN_CYPRESS }} == 'true' && ${{ inputs.TESTRAIL }} == 'true'
+      if: ${{ inputs.RUN_CYPRESS == 'true' && inputs.TESTRAIL == 'true' }}
       shell: bash
       run: |
         cd tests/Cypress && \
@@ -162,7 +154,7 @@ runs:
     # --------------------------------------------------------------------------------------------------------------------------------------
 
     - name: Download Logs
-      if: ${{ inputs.RUN_CYPRESS }} == 'true' && always()
+      if: ${{ inputs.RUN_CYPRESS == 'true' && always() }}
       shell: bash
       run: |
         mkdir -p $(pwd)/tests/Cypress/cypress/logs/shopware
@@ -171,7 +163,7 @@ runs:
         docker cp shop:/var/log/php/. $(pwd)/tests/Cypress/cypress/logs/apache
 
     - name: Store Cypress Results
-      if: ${{ inputs.RUN_CYPRESS }} == 'true' && always()
+      if: ${{ inputs.RUN_CYPRESS == 'true' && always() }}
       uses: actions/upload-artifact@v2
       with:
         name: cypress_results_sw_v${{ inputs.SHOPWARE }}
