NTR: igore skip ci pipe for some files and folders

--- a/.github/workflows/ci_pipe.yml
+++ b/.github/workflows/ci_pipe.yml
@@ -2,10 +2,14 @@ name: CI Pipeline
 
 
 on:
+  workflow_dispatch:
   push:
     branches:
       - master
-  workflow_dispatch:
+    paths-ignore:
+      - '.github/**'
+      - '**.md'
+      - 'makefile'
 
 
 jobs:
