NTR: add Shopware 6.4.17.0 to pipelines

--- a/.github/workflows/pr_pipe.yml
+++ b/.github/workflows/pr_pipe.yml
@@ -259,7 +259,7 @@ jobs:
       - name: Build Plugin
         uses: ./.github/actions/build-plugin
         with:
-          shopware: 6.4.16.1
+          shopware: 6.4.17.0
 
   # ------------------------------------------------------------------------------------------------------------------------
 
@@ -270,7 +270,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        shopware: [ '6.4.16.0', '6.4.15.0', '6.4.9.0', '6.4.8.2', '6.4.0.0', '6.3.5.0' ]
+        shopware: [ '6.4.17.0', '6.4.16.0', '6.4.15.0', '6.4.9.0', '6.4.8.2', '6.4.0.0', '6.3.5.0' ]
     steps:
 
       - name: Clone Code
