--- a/.github/workflows/ci_pipe.yml
+++ b/.github/workflows/ci_pipe.yml
@@ -268,7 +268,7 @@ jobs:
       - name: Build Plugin
         uses: ./.github/actions/build-plugin
         with:
-          shopware: 6.4.16.1
+          shopware: 6.4.17.0
 
   e2e:
     name: E2E | Shopware ${{ matrix.shopware }}, PHP ${{ matrix.php }}
@@ -278,6 +278,8 @@ jobs:
       fail-fast: false
       matrix:
         include:
+          - shopware: '6.4.17.0'
+            php: '8.1'
           - shopware: '6.4.16.1'
             php: '8.1'
           - shopware: '6.4.15.2'
