--- a/src/Resources/app/administration/package.json
+++ b/src/Resources/app/administration/package.json
@@ -13,6 +13,8 @@
         "@babel/plugin-transform-runtime": "^7.15.0",
         "@babel/preset-env": "^7.15.6",
         "@babel/runtime": "^7.15.4",
+        "@stryker-mutator/core": "^6.3.0",
+        "@stryker-mutator/jest-runner": "^6.3.0",
         "babel-eslint": "10.0.2",
         "babel-jest": "^27.1.1",
         "babel-plugin-transform-flow-interface-imports": "^1.0.1",
