--- a/src/Resources/app/storefront/package.json
+++ b/src/Resources/app/storefront/package.json
@@ -12,6 +12,8 @@
         "@babel/preset-env": "^7.15.6",
         "@babel/runtime": "^7.15.4",
         "babel-jest": "^27.1.1",
+        "@stryker-mutator/core": "^6.3.0",
+        "@stryker-mutator/jest-runner": "^6.3.0",
         "babel-plugin-transform-flow-interface-imports": "^1.0.1",
         "babel-preset-env": "^1.7.0",
         "eslint": "^7.32.0",
